k8s/digitaltwins-management-host-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: digitaltwins-management-host-api
  namespace: developerautomation-xavgy
  labels:
    project: developerautomation
    department: cloudengineering
    component: digitaltwins-management
    app: digitaltwins-management-host-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: digitaltwins-management-host-api
  template:
    metadata:
      labels:
        project: developerautomation
        department: cloudengineering
        app: digitaltwins-management-host-api
        backstage.io/kubernetes-id: digitaltwins-management-host-api
    spec:
      priorityClassName: selfservice
      containers:
      - name: digitaltwins-management-host-api
        image: digitaltwins-management-host-api:latest
        ports:
        - containerPort: 54323
          name: web
        - containerPort: 8080
          name: metrics
        resources:
          requests:
            memory: "200Mi"
            cpu: "100m"
          limits:
            memory: "400Mi"
            cpu: "200m"
