k8s/digitaltwins-management-host-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: digitaltwins-management-host-api-service
  namespace: developerautomation-xavgy
  labels:
    app: digitaltwins-management-host-api
    project: developerautomation
    department: cloudengineering
    component: digitaltwins-management
spec:
  ports:
  - name: external
    port: 80
    targetPort: web
  - name: metrics
    port: 8080
    targetPort: 8080
  selector:
    app: digitaltwins-management-host-api
